fixed collapsing (i hope)

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -55,5 +55,9 @@
     .sidebar {
         width: 100%;
         display: flex;
+
+        .folderList {
+            padding: $edge-pad;
+        }
     }
 }
