--- a/src/components/folderitem/FolderItem.module.scss
+++ b/src/components/folderitem/FolderItem.module.scss
@@ -7,6 +7,7 @@
     align-items: center;
     min-width: min-content;
     gap: 15px;
+    cursor: pointer;
 
     .name {
         display: flex;
