--- a/src/components/resizable/Resizable.module.scss
+++ b/src/components/resizable/Resizable.module.scss
@@ -50,4 +50,8 @@
             }
         }
     }
+
+    .visibility {
+        visibility: hidden !important;
+    }
 }
